--- a/call-for-papers/index.html
+++ b/call-for-papers/index.html
@@ -62,7 +62,10 @@
 
     
 <article>
-    
+    <p>Gostaríamos de convidar pesquisadores de qualquer nível, e especialmente mestrandos e doutorandos, a inscrever propostas de comunicação de até 20 minutos sobre temas relacionados ao evento.</p>
+<p>Tratando-se de evento internacional, sugerimos que a apresentação do trabalho seja feita em inglês ou, se possível, que seja fornecido material de apoio (idealmente texto completo) nesta língua.</p>
+<p>As propostas serão recebidas até 12 de agosto.</p>
+
     <iframe class="registration" src="https://forms.office.com/r/nP4cggaRQi"></iframe>
 </article>
 
