--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
 <ul>
 <li>Gábor Betegh (University of Cambridge)</li>
 <li>Gabriele Cornelli (University of Brasília)</li>
+<li>Lucas Angioni (Unicamp)</li>
 <li>Matthew Duncombe (University of Nottingham)</li>
-<li>Rachel Gazolla (São Bento College)</li>
-<li>Maurício Marsola (Federal University of São Paulo)</li>
-<li>Marcelo Perine (Pontifical Catholic University of São Paulo)</li>
 <li>Angela Ulacco (University of Fribourg)</li>
 </ul>
 
