--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <li>Gabriele Cornelli (University of Brasília)</li>
 <li>Lucas Angioni (Unicamp)</li>
 <li>Matthew Duncombe (University of Nottingham)</li>
-<li>Angela Ulacco (University of Fribourg)</li>
+<li>Angela Ulacco (University of Leuven)</li>
 </ul>
 
 
