--- a/call-for-papers/index.html
+++ b/call-for-papers/index.html
@@ -53,7 +53,7 @@
     
 <article>
     <h2>Call for papers</h2>
-<p>Gostaríamos de convidar pesquisadores de qualquer nível, e especialmente mestrandos e doutorandos, a inscrever propostas de comunicação de até 20 minutos sobre temas relacionados ao evento.</p>
+<p>Gostaríamos de convidar pesquisadores de qualquer nível, especialmente mestrandos e doutorandos, a inscrever propostas de comunicação de até 20 minutos sobre temas relacionados ao evento.</p>
 <p>Tratando-se de evento internacional, sugerimos que a apresentação do trabalho seja feita em inglês ou, se possível, que seja fornecido material de apoio (idealmente texto completo) nesta língua.</p>
 <p>As propostas serão recebidas até 12 de agosto.</p>
 
