redirect para site da PUC

--- a/call-for-papers/index.html
+++ b/call-for-papers/index.html
@@ -9,8 +9,8 @@
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="">
     <title>Beyond Being  | CFP</title>
+    <meta http-equiv="refresh" content="5; URL='https://eventos.pucsp.br/beyondbeing/'"/>
 </head>
-
 <body>
     <div class="banner">
     <img src="assets/banner.jpg" alt="Conference Template Banner">
@@ -51,15 +51,12 @@
 </table>
 
     
-<article>
-    <h2>Call for papers</h2>
-<p>Gostaríamos de convidar pesquisadores de qualquer nível, especialmente mestrandos e doutorandos, a inscrever propostas de comunicação de até 20 minutos sobre temas relacionados ao evento.</p>
-<p>Tratando-se de evento internacional, sugerimos que a apresentação do trabalho seja feita em inglês ou, se possível, que seja fornecido material de apoio (idealmente texto completo) nesta língua.</p>
-<p>As propostas serão recebidas até 12 de agosto.</p>
-
-    <iframe class="registration" src="https://forms.office.com/r/nP4cggaRQi"></iframe>
-</article>
-
+    <article>
+        <div align="center">
+            <p>You're being redirected to <a href="https://eventos.pucsp.br/beyondbeing/">https://eventos.pucsp.br/beyondbeing/</a>.</p>
+        </div>
+    </article>
+    
 </body>
 <footer>
     &copy; B. L. Conte and L. J. Pitteloud
@@ -67,3 +64,4 @@
 </footer>
 
 </html>
+
