--- a/flyer/index.html
+++ b/flyer/index.html
@@ -9,8 +9,8 @@
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="">
     <title>Beyond Being  | Flyer</title>
+    <meta http-equiv="refresh" content="5; URL='https://eventos.pucsp.br/beyondbeing/'"/>
 </head>
-
 <body>
     <div class="banner">
     <img src="assets/banner.jpg" alt="Conference Template Banner">
@@ -51,12 +51,12 @@
 </table>
 
     
-<article>
-    <div align="center">
-        <p>Work in progress. This page will be updated soon. ⚠️</p>
-    </div>
-</article>
-
+    <article>
+        <div align="center">
+            <p>You're being redirected to <a href="https://eventos.pucsp.br/beyondbeing/">https://eventos.pucsp.br/beyondbeing/</a>.</p>
+        </div>
+    </article>
+    
 </body>
 <footer>
     &copy; B. L. Conte and L. J. Pitteloud
@@ -64,3 +64,4 @@
 </footer>
 
 </html>
+
